apps/arr/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: arr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
      app: sonarr
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.5
          ports:
            - name: sonarr
              containerPort: 8989
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data/series
              name: series
            - mountPath: /data/downloads
              name: downloads
      volumes:
        - name: config
          hostPath:
            path: /var/openebs/local/data/arr/sonarr
            type: DirectoryOrCreate
        - name: series
          hostPath:
            path: /var/openebs/local/media/video/series
            type: DirectoryOrCreate
        - name: downloads
          hostPath:
            path: /var/openebs/local/data/arr/qbittorrent/downloads
            type: DirectoryOrCreate
