apps/arr/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
  namespace: arr
  labels:
    app: sonarr
spec:
  ports:
    - port: 8989
      targetPort: sonarr
      name: sonarr
  selector:
    app: sonarr
