apps/arr/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: arr
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.222
    traefik.ingress.kubernetes.io/router.entrypoints: local
#    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: sonarr.local.boomerok.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr-service
                port:
                  name: sonarr
  tls:
    - secretName: local-tls
      hosts:
        - sonarr.local.boomerok.dev
